--- a/public/psicologia.html
+++ b/public/psicologia.html
@@ -41,10 +41,10 @@ rel="stylesheet"
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="/index.html">¿Quienes somos?</a>
-                    <a class="nav-link active" aria-current="page" href="/index.html">Sobre la Psicologia</a>
-                    <a class="nav-link" href="/index.html">Preparate con nosostros</a>
-                    <a class="nav-link" href="/psicologia.html">!Cambiando la mente¡</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html">¿Quienes somos?</a>
+                    <a class="nav-link active" aria-current="page" href="./index.html">Sobre la Psicologia</a>
+                    <a class="nav-link" href="./index.html">Preparate con nosostros</a>
+                    <a class="nav-link" href="./psicologia.html">!Cambiando la mente¡</a>
 
 
                 </div>
